# vulkan

./: .gitattributes  .gitignore  CMakeLists.txt  main.cpp
dependencies/: glslc
dependencies/vulkan/include/glm/: common.hpp  exponential.hpp  geometric.hpp  integer.hpp  matrix.hpp  packing.hpp  trigonometric.hpp  vector_relational.hpp
dependencies/vulkan/include/glm/detail/: func_common.inl  func_exponential.inl
dependencies/vulkan/include/glm/ext/: matrix_clip_space.hpp  matrix_common.hpp  matrix_int2x2.hpp  matrix_int2x2_sized.hpp  matrix_int2x3.hpp  matrix_int2x3_sized.hpp  matrix_int2x4.hpp  matrix_int2x4_sized.hpp  matrix_int3x2.hpp  matrix_int3x2_sized.hpp  matrix_int3x3.hpp  matrix_int3x3_sized.hpp  matrix_int3x4.hpp  matrix_int3x4_sized.hpp  matrix_int4x2.hpp  matrix_int4x2_sized.hpp  matrix_int4x3.hpp  matrix_int4x3_sized.hpp  matrix_int4x4.hpp  matrix_int4x4_sized.hpp  matrix_projection.hpp  matrix_relational.hpp  matrix_transform.hpp  matrix_uint2x2.hpp  matrix_uint2x2_sized.hpp  matrix_uint2x3.hpp  matrix_uint2x3_sized.hpp  matrix_uint2x4.hpp  matrix_uint2x4_sized.hpp  matrix_uint3x2.hpp  matrix_uint3x2_sized.hpp  matrix_uint3x3.hpp  matrix_uint3x3_sized.hpp  matrix_uint3x4.hpp  matrix_uint3x4_sized.hpp  matrix_uint4x2.hpp  matrix_uint4x2_sized.hpp  matrix_uint4x3.hpp  matrix_uint4x3_sized.hpp  matrix_uint4x4.hpp  (+40 more)
dependencies/vulkan/include/glm/gtc/: bitfield.hpp  color_space.hpp  constants.hpp  epsilon.hpp  integer.hpp  matrix_access.hpp  matrix_integer.hpp  noise.hpp  (+12 more)
res/shaders/: compileShaders.sh
shaders/: compileShaders.sh  shader.vert
(+64 files in other folders)
